config.json -> application_settings.json
deleted:
 applicationAssetsFolder
 applicationConfigFolder
 apiLogout
 logout
 restRequestDebugFlag
 tm1ExecuteMDX
 MDXUrl
 defaultMDXQuery
 defaultUploadTargetFolder deleted: app.defaultUploadTargetFolder
 defaultUploadStagingFolder deleted: app.defaultUploadStagingFolder
 subpath
 host
 tm1ApiHostBackend

MainPage -> mainPage

Export:

    cnf = setting.getConfig()
    target_url = cnf['tm1ApiHost']

    -->

    target_url = setting.getPoolTargetUrl()

required config:

  "proxy": {
    "target": "https://kseed-dc1.knowledgeseed.local:5125/rochebpspapi"
  },


EmailManager:
    smtp: {
      sender_email: '',
      server: '',
      port: '',
      password: '', required in analogic, optional in analogic_pool (stored in credential manager or same way in application_settings.json)
    }

pool: {
 users: [...
}

Export
doPoolRequest -> do_proxy_request
getPoolTargetUrl -> get_proxy_target_url