@@ -35,6 +35,7 @@
 <script  src="{{ url_for('static', filename='assets/js/tm1/load-executor/skip.js')}}?v={{cnf.version}}"></script>
 <script  src="{{ url_for('static', filename='assets/js/tm1/load-executor/state.js')}}?v={{cnf.version}}"></script>
 <script  src="{{ url_for('static', filename='assets/js/tm1/load-executor/pivot.js')}}?v={{cnf.version}}"></script>
+<script  src="{{ url_for('static', filename='assets/js/tm1/load-executor/array.js')}}?v={{cnf.version}}"></script>
 <script  src="{{ url_for('static', filename='assets/js/tm1/parsing-control/factory.js')}}?v={{cnf.version}}"></script>
 <script  src="{{ url_for('static', filename='assets/js/tm1/parsing-control/base.js')}}?v={{cnf.version}}"></script>
 <script  src="{{ url_for('static', filename='assets/js/tm1/parsing-control/skip.js')}}?v={{cnf.version}}"></script>
