@@ -47,3 +47,6 @@ pool: {
 Export
 doPoolRequest -> do_proxy_request
 getPoolTargetUrl -> get_proxy_target_url
+
+query-builder: executeMDXS callExecute deleted -> init as function and RestRequest
+query-builder: executeMDXS mainQueryIndex deleted
